--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-daterange-picker": "^2.0.1",
     "react-dom": "^16.11.0",
     "react-media-query-hoc": "^2.1.0",
+    "react-multi-carousel": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
