--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-media-query-hoc": "^2.1.0",
     "react-multi-carousel": "^2.4.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-slick": "^0.25.2"
   },
   "scripts": {
     "start": "react-scripts start",
