--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-slick": "^0.25.2"
+    "react-slick": "^0.25.2",
+    "react-timer-hook": "^1.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
