--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "google-maps-react": "^2.0.2",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
